src/main/scala/parsers/syntactical/TPTPParsers.scala
package parsers.syntactical

import tptp._
import parsers.lexical._
import scala.util.parsing.combinator.syntactical.TokenParsers
import scala.util.parsing.combinator.PackratParsers

class TPTPParsers extends TokenParsers with PackratParsers {
  type Tokens = TPTPTokens
  val lexical = new TPTPLexical


  def parse[Target](input: String, parser: Parser[Target]) = {
    val tokens = new lexical.Scanner(input)
    phrase(parser)(tokens)
  }

  def tokens(input: String) = {
    new lexical.Scanner(input)
  }

  import lexical._

  //  Files
  def tptpFile: Parser[Commons.TPTPInput] = rep(tptpInput) ^^ {tptp.Commons.TPTPInput(_)}

  def tptpInput: Parser[Either[Commons.AnnotatedFormula, Commons.Include]] = (annotatedFormula ||| include) ^^ {
    case e1: Commons.AnnotatedFormula => Left(e1)
    case e2: Commons.Include  => Right(e2)
  }

  // Formula records
  def annotatedFormula: Parser[Commons.AnnotatedFormula] =
    tpiAnnotated ||| thfAnnotated ||| tffAnnotated ||| fofAnnotated ||| cnfAnnotated

  def tpiAnnotated: Parser[Commons.TPIAnnotated] =
    (elem(TPI) ~ elem(LeftParenthesis)) ~> name ~ (elem(Comma) ~> formulaRole <~ elem(Comma)) ~ fofFormula ~ annotations <~ elem(RightParenthesis) ~ elem(Dot)  ^^ {
      case name ~ role ~ formula ~ annotations => Commons.TPIAnnotated(name,role,formula,annotations)
    }
  def thfAnnotated: Parser[Commons.THFAnnotated] =
    (elem(THF) ~ elem(LeftParenthesis)) ~> name ~ (elem(Comma) ~> formulaRole <~ elem(Comma)) ~ thfFormula ~ annotations <~ elem(RightParenthesis) ~ elem(Dot)  ^^ {
      case name ~ role ~ formula ~ annotations => Commons.THFAnnotated(name,role,formula,annotations)
    }
  def tffAnnotated: Parser[Commons.TFFAnnotated] =
    (elem(TFF) ~ elem(LeftParenthesis)) ~> name ~ (elem(Comma) ~> formulaRole <~ elem(Comma)) ~ tffFormula ~ annotations <~ elem(RightParenthesis) ~ elem(Dot)  ^^ {
      case name ~ role ~ formula ~ annotations => Commons.TFFAnnotated(name,role,formula,annotations)
    }
  def fofAnnotated: Parser[Commons.FOFAnnotated] =
    (elem(FOF) ~ elem(LeftParenthesis)) ~> name ~ (elem(Comma) ~> formulaRole <~ elem(Comma)) ~ fofFormula ~ annotations <~ elem(RightParenthesis) ~ elem(Dot)  ^^ {
      case name ~ role ~ formula ~ annotations => Commons.FOFAnnotated(name,role,formula,annotations)
    }
  def cnfAnnotated: Parser[Commons.CNFAnnotated] =
    (elem(CNF) ~ elem(LeftParenthesis)) ~> name ~ (elem(Comma) ~> formulaRole <~ elem(Comma)) ~ cnfFormula ~ annotations <~ elem(RightParenthesis) ~ elem(Dot)  ^^ {
      case name ~ role ~ formula ~ annotations => Commons.CNFAnnotated(name,role,formula,annotations)
    }

  def annotations: Parser[tptp.Commons.Annotations] =
    opt(elem(Comma) ~> source ~ optionalInfo) ^^ {
      case None => None
      case Some(src ~ info) => Some((src,info))
    }
  def formulaRole: Parser[String] = elem("Lower word", _.isInstanceOf[LowerWord]) ^^ {_.chars}

  // special formulae
  def thfConnTerm: Parser[thf.Connective] = (
      (thfPairConnective | assocConnective) ^^ {
        case Equals               => thf.Connective(Left(thf.Eq))
        case NotEquals            => thf.Connective(Left(thf.Neq))
        case Leftrightarrow       => thf.Connective(Left(thf.<=>))
        case Rightarrow           => thf.Connective(Left(thf.Impl))
        case Leftarrow            => thf.Connective(Left(thf.<=))
        case Leftrighttildearrow  => thf.Connective(Left(thf.<~>))
        case TildePipe            => thf.Connective(Left(thf.~|))
        case TildeAmpersand       => thf.Connective(Left(thf.~&))
        case Ampersand            => thf.Connective(Left(thf.&))
        case VLine                => thf.Connective(Left(thf.|))
      }
    | thfUnaryConnective ^^ {
        case Tilde                              => thf.Connective(Right(thf.~))
        case Exclamationmark ~ Exclamationmark  => thf.Connective(Right(thf.!!))
        case Questionmark ~ Questionmark        => thf.Connective(Right(thf.??))
      }
  )

  def folInfixUnary: Parser[Commons.Term ~ Commons.Term] =
    term ~ elem(NotEquals) ~ term ^^ {
      case l ~ _ ~ r => this.~(l,r)
    }

  // Connectives THF
  def thfQuantifier: Parser[Any] = (
      folQuantifier
    | elem(Lambda)
    | elem(Exclamationmark) ~ elem(Arrow)
    | elem(Questionmark) ~ elem(Star)
    | elem(Application) ~ elem(Plus)
    | elem(Application) ~ elem(Minus)
  )

  def thfPairConnective: Parser[Token] = (
      elem(Equals)
    | elem(NotEquals)
    | binaryConnective
  )

  def thfUnaryConnective: Parser[Any] = (
      unaryConnective
    | elem(Exclamationmark) ~ elem(Exclamationmark)
    | elem(Questionmark) ~ elem(Questionmark)
  )

  // Connectives TFF and THF
  def subtypeSign: Parser[String] = repN(2,elem(LessSign)) ^^ {_  => ""}

  // Connectives FOF
  def folQuantifier: Parser[Token] = elem(Exclamationmark) | elem(Questionmark)
  def binaryConnective: Parser[Token] = (
      elem(Leftrightarrow)
    | elem(Rightarrow)
    | elem(Leftarrow)
    | elem(Leftrighttildearrow)
    | elem(TildePipe)
    | elem(TildeAmpersand)
  )

  def assocConnective: Parser[Token] = elem(VLine) | elem(Ampersand)
  def unaryConnective: Parser[Token] = elem(Tilde)

  // Gentzen arrow
  def gentzenArrow: Parser[String] = elem(Minus) ~ elem(Minus) ~ elem(Rightarrow) ^^ {_ => ""}

  // Types for tff and thf
  def definedType: Parser[String] = atomicDefinedWord
  def systemType: Parser[String] = atomicSystemWord

  // First-order atoms
  def atomicFormula: Parser[Commons.AtomicFormula] =
    plainAtomicFormula ||| definedPlainFormula ||| definedInfixFormula ||| systemAtomicFormula

  def plainAtomicFormula: Parser[Commons.Plain] = plainTerm ^^ {Commons.Plain(_)}
  def definedPlainFormula: Parser[Commons.DefinedPlain] = definedPlainTerm ^^ {Commons.DefinedPlain(_)}
  def definedInfixFormula: Parser[Commons.Equality] =
    term ~ elem(Equals) ~ term ^^ {
      case t1 ~ _ ~ t2 => Commons.Equality(t1,t2)
    }
  def systemAtomicFormula: Parser[Commons.SystemPlain] = systemTerm ^^ {Commons.SystemPlain(_)}

  // First-order terms
  def term: Parser[Commons.Term] = functionTerm |||
    variable ^^ {Commons.Var(_)} |||
    conditionalTerm |||
    letTerm

  def functionTerm: Parser[Commons.Term] =
    plainTerm |||
    definedPlainTerm |||
    systemTerm |||
    number ^^ {Commons.Number(_)} |||
    elem("Distinct object", _.isInstanceOf[DistinctObject]) ^^ {x => Commons.Distinct(x.chars)}

  def plainTerm: Parser[Commons.Func] =
    constant ~ opt(elem(LeftParenthesis) ~> arguments <~ elem(RightParenthesis)) ^^ {
      case c ~ Some(x) => Commons.Func(c,x)
      case c ~ _       => Commons.Func(c,List())
    }

  def constant: Parser[String] = atomicWord
  def definedPlainTerm: Parser[Commons.DefinedFunc] =
    atomicDefinedWord ~ opt(elem(LeftParenthesis) ~> arguments <~ elem(RightParenthesis)) ^^ {
      case c ~ Some(x) => Commons.DefinedFunc(c,x)
      case c ~ _       => Commons.DefinedFunc(c,List())
    }
  def systemTerm: Parser[Commons.SystemFunc] =
    atomicSystemWord ~ opt(elem(LeftParenthesis) ~> arguments <~ elem(RightParenthesis)) ^^ {
      case c ~ Some(x) => Commons.SystemFunc(c,x)
      case c ~ _       => Commons.SystemFunc(c,List())
    }

  def variable: Parser[Commons.Variable] = elem("Upper word", _.isInstanceOf[UpperWord]) ^^ {_.chars}
  def arguments: Parser[List[Commons.Term]] = rep1sep(term, elem(Comma))

  def conditionalTerm: Parser[Commons.Cond] =
    (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$ite_t"))(_ => "Error in Conditional Term") ~ elem(LeftParenthesis)) ~>
      tffLogicFormula ~ elem(Comma) ~ term ~ elem(Comma) ~ term <~ elem(RightParenthesis) ^^ {
        case formula ~ _ ~ thn ~ _ ~ els => Commons.Cond(formula,thn,els)
    }
  def letTerm: Parser[Commons.Let] =
    (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$let_ft"))(_ => "Error in Let Term") ~ elem(LeftParenthesis)) ~>
      (tffLetFormulaDefn ||| tffLetTermDefn) ~ elem(Comma) ~ term <~ elem(RightParenthesis) ^^ {
        case lets ~ _ ~ in => Commons.Let(lets,in)
    }

  // Formula sources and infos
  def source: Parser[Commons.GeneralTerm] = generalTerm
  def optionalInfo: Parser[List[Commons.GeneralTerm]] = opt(elem(Comma) ~> usefulInfo) ^^ {
    case None => List.empty
    case Some(x) => x
  }

  def usefulInfo: Parser[List[Commons.GeneralTerm]] = generalList

  // Include directives
  def include: Parser[tptp.Commons.Include] = (
    (elem(Include) ~ elem(LeftParenthesis)) ~> elem("Single quoted", _.isInstanceOf[SingleQuoted])
      ~ opt((elem(Comma) ~ elem(LeftBracket)) ~> repsep(name,elem(Comma)) <~ elem(RightBracket))
      <~ (elem(RightParenthesis) ~ elem(Dot)) ^^ {
        case SingleQuoted(data) ~ Some(names) => (data.substring(1,data.length-1), names)
        case SingleQuoted(data) ~ _           => (data.substring(1,data.length-1), List.empty)
    }
  )
  // Non-logical data (GeneralTerm, General data)
  def generalTerm: Parser[tptp.Commons.GeneralTerm] = (
        generalList                             ^^ {x => Commons.GeneralTerm(List(Right(x)))}
    ||| generalData                             ^^ {x => Commons.GeneralTerm(List(Left(x)))}
    ||| generalData ~ elem(Colon) ~ generalTerm ^^ {case data ~ _ ~ gterm => Commons.GeneralTerm(Left(data) :: gterm.term)}
  )

  def generalData: Parser[tptp.Commons.GeneralData] = (
        atomicWord                                              ^^ {tptp.Commons.GWord(_)}
    ||| generalFunction
    ||| variable                                                ^^ {tptp.Commons.GVar(_)}
    ||| number                                                  ^^ {tptp.Commons.GNumber(_)}
    ||| elem("Distinct object", _.isInstanceOf[DistinctObject]) ^^ {x => tptp.Commons.GDistinct(x.chars)}
    ||| formulaData                                             ^^ {tptp.Commons.GFormulaData(_)}
  )

  def generalFunction: Parser[tptp.Commons.GFunc] =
    atomicWord ~ elem(LeftParenthesis) ~ generalTerms ~ elem(RightParenthesis) ^^ {
      case name ~ _ ~ args ~ _  => tptp.Commons.GFunc(name,args)
    }

  def formulaData: Parser[tptp.Commons.FormulaData] = (
      (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$thf"))(_ => "Parse error in formulaData") ~ elem(LeftParenthesis)) ~>
        thfFormula <~ elem(RightParenthesis) ^^ {tptp.Commons.THFData(_)}
    | (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$tff"))(_ => "Parse error in formulaData") ~ elem(LeftParenthesis)) ~>
        tffFormula <~ elem(RightParenthesis) ^^ {tptp.Commons.TFFData(_)}
    | (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$fof"))(_ => "Parse error in formulaData") ~ elem(LeftParenthesis)) ~>
        fofFormula <~ elem(RightParenthesis) ^^ {tptp.Commons.FOFData(_)}
    | (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$cnf"))(_ => "Parse error in formulaData") ~ elem(LeftParenthesis)) ~>
        cnfFormula <~ elem(RightParenthesis) ^^ {tptp.Commons.CNFData(_)}
    | (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$fot"))(_ => "Parse error in formulaData") ~ elem(LeftParenthesis)) ~>
        term <~ elem(RightParenthesis) ^^ {tptp.Commons.FOTData(_)}
  )

  def generalList: Parser[List[tptp.Commons.GeneralTerm]] =
    elem(LeftBracket) ~> opt(generalTerms) <~ elem(RightBracket) ^^ {
      case Some(gt)   => gt
      case _       => List.empty
    }
  def generalTerms: Parser[List[tptp.Commons.GeneralTerm]] = rep1sep(generalTerm, elem(Comma))

  // General purpose
  def name: Parser[String] = (
      atomicWord
    | elem("integer", _.isInstanceOf[Integer]) ^^ {_.chars}
  )
  def atomicWord: Parser[String] = (
      elem("lower word", _.isInstanceOf[LowerWord]) ^^ {_.chars}
    | elem("single quoted", _.isInstanceOf[SingleQuoted]) ^^ {_.chars}
  )
  def atomicDefinedWord: Parser[String] = elem("Dollar word", _.isInstanceOf[DollarWord]) ^^ {_.chars}
  def atomicSystemWord: Parser[String] = elem("Dollar Dollar word", _.isInstanceOf[DollarDollarWord]) ^^ {_.chars}
  def number: Parser[Double] = (
      elem("Integer", _.isInstanceOf[Integer]) ^^ {_.asInstanceOf[Integer].value.toDouble}
    | elem("Real", _.isInstanceOf[Real]) ^^ {x => (x.asInstanceOf[Real].coeff.toString + "E" + x.asInstanceOf[Real].exp.toString).toDouble}
    | elem("Rational", _.isInstanceOf[Rational]) ^^ {x => (x.asInstanceOf[Rational]).p / (x.asInstanceOf[Rational]).q}
  )

  def fileName: Parser[String] = elem("single quoted", _.isInstanceOf[SingleQuoted]) ^^ {_.chars}

  /**
   * THF BNFs
   */
  def thfFormula: Parser[thf.Formula] = thfLogicFormula ^^ {thf.Logical(_)} | thfSequent
  def thfLogicFormula: Parser[thf.LogicFormula] = thfBinaryFormula ||| thfUnitaryFormula |||
      thfTypeFormula ||| thfSubtype
  def thfBinaryFormula:Parser[thf.LogicFormula] = thfBinaryPair ||| thfBinaryTuple ||| thfBinaryType ^^ {thf.BinType(_)}

  def thfBinaryPair:Parser[thf.Binary] = thfUnitaryFormula ~ thfPairConnective ~ thfUnitaryFormula ^^ {
    case left ~ Equals         ~ right => thf.Binary(left, thf.Eq,right)
    case left ~ NotEquals      ~ right => thf.Binary(left, thf.Neq, right)
    case left ~ Leftrightarrow ~ right => thf.Binary(left, thf.<=>, right)
    case left ~ Rightarrow     ~ right => thf.Binary(left, thf.Impl, right)
    case left ~ Leftarrow      ~ right => thf.Binary(left, thf.<=, right)
    case left ~ Leftrighttildearrow ~ right => thf.Binary(left, thf.<~>, right)
    case left ~ TildePipe      ~ right => thf.Binary(left, thf.~|, right)
    case left ~ TildeAmpersand ~ right => thf.Binary(left, thf.~&, right)
  }

  def thfBinaryTuple: Parser[thf.Binary] = thfOrFormula | thfAndFormula | thfApplyFormula

  lazy val thfOrFormula: PackratParser[thf.Binary] = (
        thfUnitaryFormula ~ elem(VLine) ~ thfUnitaryFormula ^^ {case left ~ _ ~ right => thf.Binary(left, thf.|, right)}
    ||| thfOrFormula ~ elem(VLine) ~ thfUnitaryFormula      ^^ {case left ~ _ ~ right => thf.Binary(left, thf.|, right)}
  )

  lazy val thfAndFormula: PackratParser[thf.Binary] = (
        thfUnitaryFormula ~ elem(Ampersand) ~ thfUnitaryFormula ^^ {case left ~ _ ~ right => thf.Binary(left, thf.&, right)}
    ||| thfAndFormula ~ elem(Ampersand) ~ thfUnitaryFormula     ^^ {case left ~ _ ~ right => thf.Binary(left, thf.&, right)}
  )

  lazy val thfApplyFormula: PackratParser[thf.Binary] = (
        thfUnitaryFormula ~ elem(Application) ~ thfUnitaryFormula ^^ {case left ~ _ ~ right => thf.Binary(left, thf.App, right)}
    ||| thfApplyFormula ~ elem(Application) ~ thfUnitaryFormula   ^^ {case left ~ _ ~ right => thf.Binary(left, thf.App, right)}
  )

  def thfUnitaryFormula: Parser[thf.LogicFormula] = (
      thfQuantifiedFormula
    | thfUnaryFormula
    | thfAtom
    | thfConditional
    | elem(LeftParenthesis) ~> thfLogicFormula <~ elem(RightParenthesis)
  )

  def thfQuantifiedFormula: Parser[thf.Quantified] =
    thfQuantifier ~ elem(LeftBracket) ~ rep1sep(thfVariable, elem(Comma)) ~ elem(RightBracket) ~ elem(Colon) ~ thfUnitaryFormula ^^ {
      case Exclamationmark           ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.!,varList,matrix)
      case Questionmark              ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.?,varList,matrix)
      case Lambda                    ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.^,varList,matrix)
      case (Exclamationmark ~ Arrow) ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.!>,varList,matrix)
      case (Questionmark ~ Star)     ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.?*,varList,matrix)
      case (Application ~ Plus)      ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.@+,varList,matrix)
      case (Application ~ Minus)     ~ _ ~ varList ~ _ ~ _ ~ matrix => thf.Quantified(thf.@-,varList,matrix)
    }

  def thfVariable: Parser[(Commons.Variable, Option[thf.LogicFormula])] =
    thfTypedVariable | variable ^^ { (_, None)}

  def thfTypedVariable: Parser[(Commons.Variable, Option[thf.LogicFormula])] =
    variable ~ elem(Colon) ~ thfTopLevelType ^^ {
      case vari ~ _ ~ typ => (vari, Some(typ))
    }

  def thfUnaryFormula: Parser[thf.Unary] = thfUnaryConnective ~ elem(LeftParenthesis) ~ thfLogicFormula <~ elem(RightParenthesis) ^^ {
    case Tilde                               ~ _ ~ formula => thf.Unary(thf.~, formula)
    case (Exclamationmark ~ Exclamationmark) ~ _ ~ formula => thf.Unary(thf.!!, formula)
    case (Questionmark ~ Questionmark)       ~ _ ~ formula => thf.Unary(thf.??, formula)
  }

  def thfAtom: Parser[thf.LogicFormula] = term ^^ {thf.Term(_)} | thfConnTerm

  def thfConditional: Parser[thf.Cond] = (
       (acceptIf(x => x.isInstanceOf[DollarWord] && x.chars.equals("$ite_f"))(_ => "Parse error in thfConditional") ~ elem(LeftParenthesis))
    ~> thfLogicFormula ~ elem(Comma) ~ thfLogicFormula ~ elem(Comma) ~ thfLogicFormula  <~ elem(RightParenthesis) ^^ {
    case cond ~ _ ~ thn ~ _ ~ els => thf.Cond(cond,thn,els)
  }
  )
